Added two actions under /misc.
